tests/requests/snapshots/can_login_without_verify@auth_request.snap
---
source: tests/requests/auth.rs
expression: login_response.text()
---
"{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"loco\",\"is_verified\":false,\"email\":\"test@loco.com\",\"role\":\"Admin\"}"
