tests/requests/snapshots/fails_on_invalid_timezone@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(register_response.status_code(), register_response.text())"
---
(
    500,
    "{\"error\":\"internal_server_error\",\"description\":\"Internal Server Error\"}",
)
