tests/requests/snapshots/login_with_valid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"loco\",\"is_verified\":true,\"email\":\"test@loco.com\",\"role\":\"Admin\"}",
)
